# specx

./: .env.example  .env.test.example  .gitignore  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  Makefile  PROMPT_TEMPLATE.md  README.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json  prek.toml  pyproject.toml  ruff.toml  setup.cfg  skills-lock.json  tsconfig.json
.github/workflows/: deploy-storybook.yml  docs.yaml  integration.yaml  lint_test.yaml
.storybook/: main.ts  manager-head.html  manager.ts  preview.css  preview.ts
.storybook/addon-theme/: index.tsx  themeStore.ts  themes.ts
.storybook/components/: CodeBlock.tsx  DocsCard.tsx  Icons.tsx  StorybookApp.tsx
docker/: Dockerfile  Dockerfile.dockerignore  docker-compose.local.yaml  docker-compose.test.yaml  docker-compose.yaml
docs/: AddCoreBehavior.mdx  AddFastAPI.mdx  AddPersistence.mdx  AdoptExisting.mdx  ArchitecturePythonApi.mdx  BehaviorCategories.mdx  CLAUDE.md  ComposeDependencies.mdx  Contributing.mdx  FirstService.mdx  Glossary.mdx  InstallSkills.mdx  Introduction.mdx  Quickstart.mdx  SettingsLogging.mdx  SkillsCatalog.mdx  TestService.mdx  Transactions.mdx  mkdocs.yml  package.json
docs/.storybook/: docsNavigation.ts  main.ts  manager-head.html  manager.ts  preview-head.html  preview.css  preview.ts
docs/adr/: 0001-agent-led-setup.md  (+1 more)
management/: __init__.py  dependency_updater.py  manage.py
migrations/: env.py
samples/task-db-service/: .env.example  AGENTS.md  Makefile  README.md  pyproject.toml
samples/task-db-service/migrations/: env.py
samples/task-db-service/migrations/versions/: 202607080001_create_tasks.py
samples/task-db-service/src/task_db_service/core/health/dtos/: health_status_dto.py
samples/task-db-service/src/task_db_service/core/health/services/: health_reporter_service.py
samples/task-db-service/src/task_db_service/core/health/use_cases/: check_health.py
samples/task-db-service/src/task_db_service/core/tasks/dtos/: task_dto.py  task_list_dto.py
samples/task-db-service/src/task_db_service/core/tasks/entities/: task_entity.py
samples/task-db-service/src/task_db_service/core/tasks/exceptions/: invalid_task_title_value_error.py  task_not_found_error.py
samples/task-db-service/src/task_db_service/core/tasks/infrastructure/sqlalchemy/: task_unit_of_work.py
samples/task-db-service/src/task_db_service/core/tasks/infrastructure/sqlalchemy/models/: task_model.py
samples/task-db-service/src/task_db_service/core/tasks/infrastructure/sqlalchemy/repositories/: sqlalchemy_task_repository.py
samples/task-db-service/src/task_db_service/core/tasks/repositories/: task_repository.py  task_unit_of_work.py
samples/task-db-service/src/task_db_service/core/tasks/services/: task_completion_service.py  task_creation_service.py  task_lookup_service.py  task_title_normalizer_service.py
samples/task-db-service/src/task_db_service/core/tasks/use_cases/: complete_task.py  create_task.py  get_task.py  list_tasks.py
samples/task-db-service/src/task_db_service/delivery/fastapi/: __main__.py  app.py  factory.py
samples/task-db-service/src/task_db_service/delivery/fastapi/controllers/: health.py  tasks.py
samples/task-db-service/src/task_db_service/delivery/fastapi/schemas/: health_schema.py  task_schema.py
samples/task-db-service/src/task_db_service/foundation/: capability.py  command.py  dto.py  effect_service.py  entity.py  gateway.py  pure_service.py  query.py  read_service.py  repository.py  service.py  settings.py  unit_of_work.py  unit_of_work_manager.py  use_case.py
samples/task-db-service/src/task_db_service/foundation/delivery/: controller.py
samples/task-db-service/src/task_db_service/foundation/delivery/fastapi/: schema.py
samples/task-db-service/src/task_db_service/foundation/infrastructure/sqlalchemy/: model.py
samples/task-db-service/src/task_db_service/infrastructure/sqlalchemy/: session.py  settings.py
samples/task-db-service/src/task_db_service/ioc/: container.py
samples/task-db-service/tests/: conftest.py
samples/task-db-service/tests/_support/: integration.py
samples/task-db-service/tests/_support/bases/: factories.py
samples/task-db-service/tests/_support/clients/: fastapi.py
samples/task-db-service/tests/_support/db/: sqlalchemy.py
samples/task-db-service/tests/_support/fakes/core/: tasks.py
samples/task-db-service/tests/architecture/: test_boundaries.py
samples/task-db-service/tests/guardrails/architecture/: test_boundaries.py
samples/task-db-service/tests/integration/: conftest.py
samples/task-db-service/tests/integration/core/: conftest.py
samples/task-db-service/tests/integration/core/tasks/: conftest.py
samples/task-db-service/tests/integration/core/tasks/use_cases/: test_complete_task.py  test_create_task.py  test_get_task.py  test_list_tasks.py
samples/task-db-service/tests/integration/delivery/: conftest.py  test_fastapi_tasks.py
samples/task-db-service/tests/integration/delivery/fastapi/: test_factory.py
samples/task-db-service/tests/integration/delivery/fastapi/controllers/: test_health.py  test_tasks.py
samples/task-db-service/tests/integration/infrastructure/: test_alembic_migrations.py  test_sqlalchemy_tasks.py
samples/task-db-service/tests/integration/ioc/: test_container.py
samples/task-db-service/tests/integration/migrations/: test_alembic.py
samples/task-db-service/tests/unit/core/health/: conftest.py  test_check_health.py
samples/task-db-service/tests/unit/core/health/services/: test_health_reporter_service.py
samples/task-db-service/tests/unit/core/health/use_cases/: test_check_health.py
samples/task-db-service/tests/unit/core/tasks/: conftest.py  test_task_title_normalizer_service.py
samples/task-db-service/tests/unit/core/tasks/services/: test_task_completion_service.py  test_task_creation_service.py  test_task_lookup_service.py  test_task_title_normalizer_service.py
samples/task-db-service/tests/unit/core/tasks/use_cases/: test_complete_task.py  test_create_task.py  test_get_task.py  test_list_tasks.py
scripts/: check-docs.mjs  validate_skills.py
tests/: conftest.py
(+671 files in other folders)
