[project]
name = "modern-python-template"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.2",
    "aiosqlite>=0.22.0",
    "annotated-types>=0.7.0",
    "colorlog>=6.10.1",
    "diwire>=1.4.2",
    "fastapi>=0.139.0",
    "gunicorn>=26.0.0",
    "httpx>=0.28.1",
    "logfire[fastapi, requests, psycopg, httpx, redis]>=4.37.0",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "pydantic[email]>=2.13.4",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "redis>=8.0.1",
    "sqlalchemy[asyncio]>=2.0.45",
    "throttled-py>=3.4.0",
    "uvicorn[standard]>=0.49.0",
    "watchdog[watchmedo]>=6.0.0",
]

[dependency-groups]
dev = [
    "flake8>=7.3,<8",
    "httpx2>=0.28.1",
    "mypy>=2.1.0",
    "prek>=0.4.6",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.20",
    "types-pyyaml>=6.0,<7",
    "wemake-python-styleguide>=1.6,<2",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
]

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "fastapi_template"

[tool.mypy]
python_version = "3.14"
strict = true
plugins = ["diwire.integrations.mypy_plugin"]
extra_checks = true
local_partial_types = true
strict_equality_for_none = true
warn_unreachable = true
enable_error_code = [
    "truthy-bool",
    "truthy-iterable",
    "redundant-expr",
    "unused-awaitable",
    "ignore-without-code",
    "possibly-undefined",
    "redundant-self",
    "unimported-reveal",
    "deprecated",
    "exhaustive-match",
]

[tool.logfire]
ignore_no_config = true

[tool.pytest.ini_options]
minversion = "9.0"
addopts = "--exitfirst -vv --strict-config --strict-markers --import-mode=importlib --cov=src --cov-report=term-missing:skip-covered --cov-report=html --cov-fail-under=100"
filterwarnings = ["error"]
pythonpath = ["."]
xfail_strict = true
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    # Entry points
    "src/fastapi_template/entrypoints/fastapi/app.py",
    "src/fastapi_template/entrypoints/fastapi/bootstrap.py",
    # Migration scripts
    "migrations/**",
]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "@abstractmethod",
    "if TYPE_CHECKING:",
    "@overload",
    "class .*\\bProtocol\\):",
    "^\\s*pass$",
    "^\\s*\\.\\.\\.$",
]
skip_empty = true
