[project]
name = "task-db-service"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.0",
    "alembic>=1.16.0",
    "diwire>=1.4.2",
    "fastapi>=0.138.0",
    "pydantic-settings>=2.14.0",
    "pydantic>=2.13.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx2>=0.28.0",
    "mypy>=2.1.0",
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.0",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "task_db_service"

[tool.mypy]
python_version = "3.14"
strict = true
plugins = ["diwire.integrations.mypy_plugin"]
warn_unreachable = true
extra_checks = true

[tool.pytest.ini_options]
minversion = "9.0"
addopts = "-vv --strict-config --strict-markers --import-mode=importlib"
pythonpath = ["."]
testpaths = ["tests"]
xfail_strict = true

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests", "migrations"]

[tool.ruff.lint]
select = [
    "A",
    "ASYNC",
    "B",
    "C4",
    "E",
    "F",
    "I",
    "N",
    "PIE",
    "PT",
    "PTH",
    "RET",
    "RUF",
    "SIM",
    "UP",
]
ignore = []
